--- a/packages.config
+++ b/packages.config
@@ -37,6 +37,8 @@
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.35.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.35.0" targetFramework="net48" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
+  <package id="OpenCvSharp4" version="4.10.0.20240616" targetFramework="net48" />
+  <package id="OpenCvSharp4.runtime.win" version="4.10.0.20240616" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net48" />
